--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
-    "name"         : "node-red-contrib-ClearSCADA",
-    "version"      : "0.0.1",
-    "description"  : "Push telemetry point data into ClearSCADA through its web service.",
+    "name"         : "node-red-contrib-GeoSCADA",
+    "version"      : "0.0.2",
+    "description"  : "Push and pull telemetry data into and out of Geo SCADA through its web service.",
 	"license"      : "MIT",
     "dependencies": {
     },
     "keywords": [ "node-red", "SCADA" ],
     "node-red"     : {
         "nodes": {
-            "ClearSCADA": "ClearSCADA/ClearSCADA.js"
+            "ClearSCADA": "GeoSCADA.js"
         }
     },
 	"author": {
         "name": "Stephen Beadle",
-        "email": "stephen.beadle@schneider-electric.com"
+        "email": "stephen.beadle@se.com"
     }
 }
